fixed nav bar spacing issue

--- a/Client/src/Home/Home.css
+++ b/Client/src/Home/Home.css
@@ -35,6 +35,6 @@
     margin-top: 50px;
 }
 
-li {
+.mainBody>li {
     margin-bottom: 50px;
 }
